# pump-token-monitor

./: .gitignore  Cargo.toml  README.md  token.json
migrations/: V001_optional_sort_indexes.sql  V002_token_prices.sql  V003_trade_tables.sql  V004_pump_tokens_dead_token.sql  V005_sell_history_buy_snapshot.sql  V006_pump_tokens_usd_quotes.sql  V007_pump_tokens_jupiter_metadata.sql
src/: api.rs  config.rs  db.rs  dead_tokens.rs  jupiter_tokens.rs  main.rs  monitor.rs  price.rs  pump.rs  rpc.rs  store.rs  telegram.rs  trading.rs  types.rs
